--- a/products/earbuds.html
+++ b/products/earbuds.html
@@ -5,16 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#004aad">
-  <link rel="canonical" href="https://thebacket.co/products/intelligent-posture-corrector">
-  <meta name="format-detection" content="telephone=no"><link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/0573/3820/0137/files/icon_1_32x32.png?v=1653906565" type="image/png" />
+  <link rel="canonical" href="//products/earbuds">
+  <meta name="format-detection" content="telephone=no"><link rel="shortcut icon" href="//img/q-tech-logo-noname.png" type="image/png" />
 <title>
-  INTELLIGENT POSTURE CORRECTOR
+  Powerful Bluetooth sports earphones
 
-&ndash; Lightspeed Back Posture
+&ndash; Q-Tech
 
-</title><meta name="description" content=""><meta property="og:site_name" content="Lightspeed Back Posture">
-<meta property="og:url" content="https://thebacket.co/products/intelligent-posture-corrector">
-<meta property="og:title" content="INTELLIGENT POSTURE CORRECTOR">
+</title><meta name="description" content=""><meta property="og:site_name" content="Q-Tech Earphones">
+<meta property="og:url" content="https://q-tech.us/products/earbuds">
+<meta property="og:title" content="Powerful Bluetooth sports earphones">
 <meta property="og:type" content="product">
 <meta property="og:description" content="the simplest, fastest and most natural way to improve your posture in just 2 weeks. Healthy upright posture strengthens back and core muscles, stimulates better blood flow and promotes overall well-being."><meta property="og:price:amount" content="34.95">
   <meta property="og:price:currency" content="USD"><meta property="og:image" content="http://cdn.shopify.com/s/files/1/0573/3820/0137/products/S858579a9caa14e8ba24338d706356818X_1200x630.jpg?v=1653834465"><meta property="og:image" content="http://cdn.shopify.com/s/files/1/0573/3820/0137/products/S52eaed02e36247c3a5dc3fea4613fd40s_1200x630.jpg?v=1653834465"><meta property="og:image" content="http://cdn.shopify.com/s/files/1/0573/3820/0137/products/S9cef3eb35c49459f86625a841e11fbb4o_1200x630.jpg?v=1653834465">
