--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#004aad">
   <link rel="canonical" href="https://q-tech.us/">
-  <meta name="format-detection" content="telephone=no"><link rel="shortcut icon" href="//img/q-tech-logo-noname.png" type="image/png" />
+  <meta name="format-detection" content="telephone=no"><link rel="shortcut icon" href="https://devastmod.github.io/earbuds-store/img/q-tech-logo-noname.png" type="image/png" />
 <title>
   Intelligent Posture Corrector 50% Off Today Get Yours Now........... |
 
