--- a/index.html
+++ b/index.html
@@ -830,15 +830,15 @@ webPixelsManagerAPI.publish("page_viewed");
         class="site-header__logo-link">
         <img
           class="small--hide"
-          src="//cdn.shopify.com/s/files/1/0573/3820/0137/files/Lightspeed_Back_Posture_250x.png?v=1653906359"
-          srcset="//cdn.shopify.com/s/files/1/0573/3820/0137/files/Lightspeed_Back_Posture_250x.png?v=1653906359 1x, //cdn.shopify.com/s/files/1/0573/3820/0137/files/Lightspeed_Back_Posture_250x@2x.png?v=1653906359 2x"
-          alt="Lightspeed Back Posture"
+          src="https://devastmod.github.io/earbuds-store/img/q-tech-logo-landscape.png"
+          srcset="https://devastmod.github.io/earbuds-store/img/q-tech-logo-landscape.png 1x, https://devastmod.github.io/earbuds-store/img/q-tech-logo-landscape.png 2x"
+          alt="Q-Tech Earbuds"
           itemprop="logo">
         <img
           class="medium-up--hide"
-          src="//cdn.shopify.com/s/files/1/0573/3820/0137/files/Lightspeed_Back_Posture_180x.png?v=1653906359"
-          srcset="//cdn.shopify.com/s/files/1/0573/3820/0137/files/Lightspeed_Back_Posture_180x.png?v=1653906359 1x, //cdn.shopify.com/s/files/1/0573/3820/0137/files/Lightspeed_Back_Posture_180x@2x.png?v=1653906359 2x"
-          alt="Lightspeed Back Posture">
+          src="https://devastmod.github.io/earbuds-store/img/q-tech-logo-landscape.png"
+          srcset="https://devastmod.github.io/earbuds-store/img/q-tech-logo-landscape.png 1x, https://devastmod.github.io/earbuds-store/img/q-tech-logo-landscape.png 2x"
+          alt="Q-Tech Earbuds">
       </a>
       
     
