--- a/products/earbuds.html
+++ b/products/earbuds.html
@@ -2034,7 +2034,7 @@ webPixelsManagerAPI.publish("page_viewed");
     
       <video
         id="Mp4Video-product-hero-video"
-        src="https://cdn.shopify.com/s/files/1/0272/7713/1885/files/main_video_5_d6264d36-96ef-40d9-8708-19017110deaa.mp4?v=1653902142"
+        src="https://devastmod.github.io/earbuds-store/img/videoplayback.mp4"
         loop muted playsinline autoplay></video>
     
 
