--- a/products/earbuds.html
+++ b/products/earbuds.html
@@ -2190,14 +2190,14 @@ webPixelsManagerAPI.publish("page_viewed");
                 }
               </style><img class="image-fit hero__image hero__image--1599103516790 lazyload"
                 src=""
-                data-src="//cdn.shopify.com/s/files/1/0573/3820/0137/files/M2_2_{width}x.png?v=1653904933"
+                data-src="https://devastmod.github.io/earbuds-store/img/lower_landscape.png"
                 data-aspectratio="2.3333333333333335"
                 data-sizes="auto"
                 data-parent-fit="cover"
                 alt="">
               <noscript>
                 <img class="image-fit hero__image hero__image--1599103516790"
-                  src="//cdn.shopify.com/s/files/1/0573/3820/0137/files/M2_2_1400x.png?v=1653904933"
+                  src="https://devastmod.github.io/earbuds-store/img/lower_landscape.png"
                   alt="">
               </noscript>
             
