--- a/products/earbuds.html
+++ b/products/earbuds.html
@@ -74,7 +74,7 @@
 
     window.theme = window.theme || {};
     theme.strings = {
-      addToCart: "ADD TO CART",
+      addToCart: "Buy",
       soldOut: "Sold Out",
       unavailable: "Unavailable",
       stockLabel: "[count] in stock",
@@ -2253,9 +2253,9 @@ webPixelsManagerAPI.publish("page_viewed");
 <script>
   // Override default values of shop.strings for each template.
   // Alternate product templates can change values of
-  // add to cart button, sold out, and unavailable states here.
+  // Buy button, sold out, and unavailable states here.
   theme.productStrings = {
-    addToCart: "ADD TO CART",
+    addToCart: "Buy",
     soldOut: "Sold Out",
     unavailable: "Unavailable"
   };
