--- a/products/earbuds.html
+++ b/products/earbuds.html
@@ -1583,7 +1583,7 @@ webPixelsManagerAPI.publish("page_viewed");
       <input type="radio"
         
         
-        value="black"
+        value="Black"
         data-index="option1"
         name="Color"
         class="variant__input-6764124536905"
